--- a/public/index.html
+++ b/public/index.html
@@ -39,11 +39,11 @@
 			<div class="navbar-header">
 				<a class="navbar-brand" href="/">Todo List App</a>
 			</div>
-			<ul class="nav navbar-nav pull-right" ng-show="!alreadyLogin">
+			<ul class="nav navbar-nav pull-right" ng-show="!$root.alreadyLogin">
 				<li><a href="/login">Login</a></li>
 				<li><a href="/register">Register</a></li>
 			</ul>			
-			<ul class="nav navbar-nav pull-right" ng-show="alreadyLogin">
+			<ul class="nav navbar-nav pull-right" ng-show="$root.alreadyLogin">
 				<li><a href="#">{{user.name}}</a></li>
 				<li><a href="#" ng-click="logout()">Logout</a></li>
 			</ul>
